[tool.poetry]
name = "sqlalchemy-table-query"
version = "0.1.0"
description = ""
authors = ["Mike Hostetler <mike@squarepegsystems.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
sqlalchemy = "^2.0.36"

[tool.poetry.dev-dependencies]
ipython = "^8.7.0"
pytest = "^7.2.0"
pytest-coverage = "^0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
